--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+:root {
+    --black-color: #222222;
+    --pink-color: #F1E4E6;
+    --dark-pink-color: #F16D7F;
+    --gray-color: #F8F8F8;
+    --gray-light-color: #E8E8E8;
+}
+
 body {
     font-family: Lato;
     font-style: normal;
@@ -5,3 +13,82 @@ body {
     font-size: 14px;
     line-height: 17px;
 }
+
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+}
+
+.header {
+    background-color: var(--black-color);
+}
+
+.header__navigation {
+    display: none;
+}
+
+.header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 75px;
+}
+
+.header__logo {
+    margin: 0 41px 0 0;
+}
+
+.header__button {
+    background: transparent;
+    border: none;
+    margin: 0 33px 0 0;
+}
+
+.header__link {
+    margin: 0 33px 0 0;
+}
+
+.brand {
+    max-width: 1600px;
+    margin: 0 auto;
+    display: flex;
+    margin: 0 0 63px;
+}
+
+.brand__title-container {
+    background: var(--pink-color);
+    flex-grow: 1;
+    padding: 0 0 0 92px;
+    display: flex;
+    align-items: center;
+}
+
+.brand__title {
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 58px;
+    text-transform: uppercase;
+}
+
+.brand__sub-title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+    display: block;
+}
+
+.brand__pink-sub-title {
+    color: var(--dark-pink-color);
+}
+
