--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     --dark-grey-color: #5D5D5D;
     --light-beige-color: #FBFBFB;
     --middle-grey-color: #E1E1E1;
+    --bright-grey-color:  #9F9F9F;
 }
 
 body {
@@ -115,12 +116,13 @@ body {
     align-items: center;
     justify-content: center;
     margin: 0 0 30px;
-    flex-direction: column;
+    text-align: center;
 }
 
 .promotion__item--woman {
     background-image: url(../img/woman-30.jpg);
     background-size: cover;
+   
 }
 
 .promotion__item--man {
@@ -139,27 +141,34 @@ body {
     width: 100%;
 }
 
+.promotion__description {
+    padding:105px 103px ;
+}
+
 .promotion__title {
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: 19px;
-    color: var(--white-color);
     text-transform: uppercase;
-    
+    color: var(--white-color);
 }
 
 .promotion__text {
     font-size: 24px;
     font-weight: 700;
     line-height: 29px;
-    color: var(--dark-pink-color);
     text-transform: uppercase;
-    
+    color: var(--dark-pink-color);  
 }
+
 
 .products {
     text-align: center;
+}
+
+.products__description {
+    margin-top: 96px;
+    margin-bottom: 48px;
 }
 
 .products__title {
@@ -173,6 +182,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
+    color: var(--bright-grey-color);
 }
 
 .products__list {
@@ -193,6 +203,7 @@ body {
 .product__description {
     background: var(--grey-color);
     padding: 25px 29px 20px 17px;
+    text-align: left;
 }
 
 .product__title {
@@ -229,21 +240,34 @@ body {
     color: var(--bright-pink-color);
     border-color: var(--bright-pink-color);
     margin-top: 49px;
+    margin-bottom: 96px;
 }
 
 .information {
     background-color: var(--antracite-grey-color);
+    background-size: cover;
 }
 
 .information__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     min-height: 341px;
 }
 
 .information__list {
     list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 104px 230px;
+    
+}
+
+.information__item {
+    padding-top: 29px;
+    padding-right: 30px;
+}
+
+.information__img {
+  
 }
 
 .information__title {
@@ -251,6 +275,7 @@ body {
     font-weight: 400;
     line-height: 24px;
     color: var(--light-beige-color);
+    text-align: center;
 }
 
 .information__text {
@@ -258,11 +283,23 @@ body {
     font-weight: 300;
     line-height: 17px;
     color: var(--light-beige-color);
+    text-align: center;
 }
 
 .subscribe {
-    background-image: url(../img/subscribe.png);
-    opacity: 70%;
+    background-image: 
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 448px;
+}
+
+
+.subscribe__img {
+    border-radius: 90%;
+    margin: 87px 340px 20px 327px;
 }
 
 .subscribe__text {
@@ -270,6 +307,8 @@ body {
     font-weight: 400;
     line-height: 24px;
     color: var(--antracite-grey-color);
+    margin: 20px 327px 126px 230px;
+    text-align: center;
 }
 
 .subscribe__text-italic{
@@ -280,13 +319,18 @@ body {
     color: var(--antracite-grey-color);
 }
 
+.subscribe__form {
+    
+}
+
 .subscribe__title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 700;
     line-height: 40px;
     font-weight: bold;
     color: var(--antracite-grey-color);
     text-transform: uppercase;
+    
 }
 
 .subscribe__title-new {
@@ -295,37 +339,71 @@ body {
     line-height: 40px;
     color: var(--antracite-grey-color);
     text-transform: uppercase;
+    display: block;
 }
 
 .subscribe__send {
     width: 323px;
     height: 49px;
+    top: 243px;
     background-color: var(--middle-grey-color);
+    padding: 7px 64px 6px 22px;
+    outline: none;
+    border-style: none;
+    display: inline-block;
+    font-size: 20px;
+    box-sizing: border-box;
+    border-radius: 25px 0 0 25px;
 }
 
 .subscribe__button {
     width: 100px;
     height: 49px;
+    top: 243px;
+    margin-left: -70px;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
     color: var(--white-color);
     background-color: var(--dark-pink-color);
+    border-radius: 0 25px 25px 0;
+    
+    
 }
 
 .social {
     background-color: var(--antracite-grey-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     min-height: 79px;
 }
+
 
 .copy {
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
     color: var(--light-beige-color);
+    margin-left: 235px;
+}
+
+.social__list {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    margin-right: 230px;
+}
+
+.social__item {
+    margin-right: 7px;
 }
 
 .social__link {
-    list-style-type: none;
+    display: block;
+    width: 32px;
+    height: 32px;
+    border: 2px solid white;
+    background-color: white;
 }
 
