--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,19 @@ body {
     margin: 0 41px 0 0;
 }
 
+.form__search::before {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    left: 10px;
+}
+
+.search-icon:hover .form__search {
+    display: block;
+}
+
 .header__button {
     background: transparent;
     border: none;
@@ -66,6 +79,16 @@ body {
 
 .header__link {
     margin: 0 33px 0 0;
+}
+
+.header__button-icon {
+    fill: var(--grey-light-color);
+}
+
+.header__button:hover .header__button-icon,
+.header__logo-icon:hover .header__button-icon,
+.header__link:hover .header__button-icon {
+    fill: var(--dark-pink-color);
 }
 
 .brand {
@@ -195,11 +218,22 @@ body {
     width: 360px;
 }
 
+.product__wrapper {
+    top: 1576px;
+    width: 360px;
+    min-height: 420px;
+}
+
 .overlay {
+    position: relative;
+}
+
+.overlay::before {
+    position: absolute;
+    content: '';
     width: 360px;
     min-height: 420px;
     background: rgba(58, 56, 56, 0.86);
-    position: absolute;
     top: 1576px;
 }
 
@@ -246,7 +280,6 @@ body {
 }
 
 .product__button {
-    position: relative;
     width: 138px;
     height: 43px;
     font-size: 14px;
@@ -429,12 +462,40 @@ body {
     margin-right: 7px;
 }
 
+.social__item-icon {
+    fill: var(--black-color);
+}
+
+.facebook {
+    padding: 8px 9px 11px 11px;
+}
+
+.instagram {
+    padding: 9px 8px 8px 8px;
+}
+
+.pinterest {
+    padding: 8px 8px 9px 10px;
+}
+
+.twitter {
+    padding: 10px 10px 7px 8px;
+}
+
 .social__link {
     display: block;
     width: 32px;
     height: 32px;
     border: 2px solid white;
     background-color: white;
+}
+
+.social__link:hover {
+    background-color: var(--dark-pink-color);
+}
+
+.social__item-icon:hover {
+    fill: var(--white-color);
 }
 
 .registration {
@@ -501,11 +562,13 @@ body {
 }
 
 .form__label {
-    margin: 20px;
+    margin: 0 0 0 20px;
     position: relative;
+    padding-right: 20px;
+    padding-left: 10px;
 }
 
-.form__label::before {
+.form__label::after {
     content: '';
     position: absolute;
     width: 17px;
@@ -514,13 +577,12 @@ body {
     top: -2px;
     border: 1px solid #A4A4A4;
     border-radius: 50%;
-    background: var(--bright-grey-color);
-    background-size: 10px;
-    display: none;
+
 }
 
-.form__radio :checked+.form__label ::after {
-    display: block;
+.form__radio:checked+.form__label::after {
+    background: #5D5D5D;
+    background-size: 10px 10px;
 }
 
 .form__text {
@@ -544,9 +606,12 @@ body {
     text-decoration: none;
 }
 
-.link__img {
+.form__link-icon {
+    fill: var(--white-color);
+    align-self: center;
     padding-left: 20px;
 }
+
 
 .loyalty {
 
