--- a/scss/blocks/_brand.scss
+++ b/scss/blocks/_brand.scss
@@ -13,16 +13,12 @@
     }
 
     &__title {
-        font-size: 48px;
-        font-weight: 900;
-        line-height: 58px;
+        @include font(48px, 58px, 900);
         text-transform: uppercase;
     }
 
     &__sub-title {
-        font-size: 32px;
-        font-weight: 700;
-        line-height: 38px;
+        @include font(32px, 38px, 700);
         display: block;
     }
 
