--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -16,16 +16,24 @@
         margin: 0 41px 0 0;
     }
 
-    &__form-search::before {
+    &__form-search {
+        position: relative;
+    }
+
+    &__search:hover .header__form-search::before {
         content: '';
         position: absolute;
-        width: 20px;
-        height: 20px;
+        width: 10px;
+        height: 10px;
         top: 20px;
         left: 10px;
     }
 
-    &__search-icon:hover .header__form-search {
+    &__form-search {
+        display: none;
+    }
+
+    &__search-icon:hover .header__search {
         display: block;
     }
 
