--- a/scss/blocks/_promotion.scss
+++ b/scss/blocks/_promotion.scss
@@ -43,17 +43,13 @@
     }
 
     &__title {
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 19px;
+        @include font(16px, 19px, 400);
         text-transform: uppercase;
         color: $white-color;
     }
 
     &__text {
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 29px;
+        @include font(24px, 29px, 700);
         text-transform: uppercase;
         color: $dark-pink-color;
     }
