--- a/scss/blocks/_subscribe.scss
+++ b/scss/blocks/_subscribe.scss
@@ -24,25 +24,19 @@
     }
 
     &__text {
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 24px;
+        @include font(20px, 24px, 400);
         color: $antracite-grey-color;
         text-align: center;
     }
 
     &__text-italic {
-        font-size: 20px;
+        @include font(20px, 24px, 400);
         font-style: italic;
-        font-weight: 400;
-        line-height: 24px;
         color: $antracite-grey-color;
     }
 
     &__title {
-        font-size: 30px;
-        font-weight: 700;
-        line-height: 40px;
+        @include font(30px, 40px, 700);
         font-weight: bold;
         color: $antracite-grey-color;
         text-transform: uppercase;
@@ -52,9 +46,7 @@
     }
 
     &__title-new {
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 40px;
+        @include font(24px, 40px, 400);
         color: $antracite-grey-color;
         text-transform: uppercase;
         text-align: center;
