создали cart.html

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,5 @@
 @import './blocks/registration';
 @import './blocks/form';
 @import './blocks/loyalty';
+@import './blocks/cart';
+@import './blocks/form__cart';
