--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ body {
 
 .header {
   background-color: #222222;
+  position: relative;
 }
 
 .header__navigation {
@@ -179,14 +180,13 @@ body {
   position: relative;
 }
 
-.header__search:hover .header__form-search::before {
+.header__search-icon:hover + .header__form-search::before {
   content: '';
   position: absolute;
   width: 10px;
   height: 10px;
   top: 20px;
   left: 10px;
-  background-size: 10px 10px;
 }
 
 .header__form-search {
@@ -203,8 +203,17 @@ body {
   margin: 0 33px 0 0;
 }
 
+.header__button:hover + .header__navigation {
+  display: block;
+}
+
 .header__button:hover .header__button-icon {
   fill: #F16D7F;
+}
+
+.header__navigation {
+  background-color: #FFFFFF;
+  position: absolute;
 }
 
 .header__link {
@@ -342,6 +351,7 @@ body {
 
 .products__item {
   width: 360px;
+  position: relative;
 }
 
 .products .product__wrapper {
@@ -389,25 +399,29 @@ body {
   line-height: 17px;
   font-weight: 400;
   text-align: center;
-  border-color: white;
+  border: 1px solid #FFFFFF;
   color: #FFFFFF;
   background: transparent;
-}
-
-.products .product .overlay {
-  position: relative;
-}
-
-.products .product .overlay::before {
   position: absolute;
-  content: '';
+  margin-top: 186px;
+  margin-left: 112px;
+}
+
+.products .product____button-icon {
+  fill: #FFFFFF;
+}
+
+.products .overlay {
   width: 360px;
   min-height: 420px;
-  background: rgba(58, 56, 56, 0.86);
-  top: 1576px;
+  background-color: rgba(58, 56, 56, 0.86);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.products .product .overlay, .products .product__button {
+.products .overlay,
+.products .product__button {
   display: none;
 }
 
@@ -773,5 +787,64 @@ body {
 .loyalty__text {
   width: 556px;
   text-align: left;
+}
+
+.cart {
+  max-width: 1600px;
+  min-height: 148px;
+  background-color: #F8F3F4;
+  margin: 0 auto;
+}
+
+.cart__title {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 400;
+  color: #F16D7F;
+  text-transform: uppercase;
+  padding-top: 59px;
+}
+
+.cart__position {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cart__position-title {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.cart__position-item {
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 400;
+}
+
+.cart__position-title-pink {
+  color: #F16D7F;
+}
+
+.cart__button {
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 17px 41px 16px 39px;
+}
+
+.cart__link {
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 17px 41px 16px 39px;
+}
+
+.form__cart {
+  flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
