--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -21,7 +21,7 @@
         position: relative;
     }
 
-    &__search:hover+.header__form-search::before {
+    &__search-icon:hover+.header__form-search::before {
         content: '';
         position: absolute;
         width: 10px;
