--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -66,41 +66,50 @@
             height: 43px;
             @include font(14px, 17px, 400);
             text-align: center;
-            border-color: white;
+            border: 1px solid $white-color;
             color: $white-color;
             background: transparent;
-        }
-
-        .overlay {
             position: absolute;
-        }
-
-        .overlay,
-        & {
-            display: none;
-        }
-
-        .products__item:hover .overlay,
-        .products__item:hover .product__button {
-            display: block;
+            margin-top: 186px;
+            margin-left: 112px;
         }
 
         &____button-icon {
             fill: $white-color;
         }
-
-        &__button {
-            width: 211px;
-            height: 47px;
-            @include font(16px, 19px, 400);
-            color: $bright-pink-color;
-            border-color: $bright-pink-color;
-            margin-top: 49px;
-            margin-bottom: 96px;
-        }
-
-        &__button:hover {
-            color: $white-color;
-            background-color: $dark-pink-color;
-        }
     }
+
+    .overlay {
+        width: 360px;
+        min-height: 420px;
+        background-color: rgba(58, 56, 56, 0.86);
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .overlay,
+    .product__button {
+        display: none;
+    }
+
+    &__item:hover .overlay,
+    &__item:hover .product__button {
+        display: block;
+    }
+
+    &__button {
+        width: 211px;
+        height: 47px;
+        @include font(16px, 19px, 400);
+        color: $bright-pink-color;
+        border-color: $bright-pink-color;
+        margin-top: 49px;
+        margin-bottom: 96px;
+    }
+
+    &__button:hover {
+        color: $white-color;
+        background-color: $dark-pink-color;
+    }
+}
