адаптив brand и promotions

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body {
 }
 
 .container {
-  width: 1140px;
+  width: 71%;
   margin: 0 auto;
 }
 
@@ -154,6 +154,12 @@ body {
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+@media (max-width: 1600px) {
+  .container {
+    width: 96%;
+  }
 }
 
 .header {
@@ -228,11 +234,31 @@ body {
   fill: #E8E8E8;
 }
 
+@media (max-width: 768px) {
+  .header .header {
+    padding: 0 16px;
+  }
+}
+
+@media (max-width: 375px) {
+  .header .header {
+    padding: 0 16px;
+  }
+  .header .header__link {
+    display: none;
+  }
+}
+
 .brand {
   max-width: 1600px;
-  margin: 0 auto;
   display: flex;
-  margin: 0 0 63px;
+  margin: 0 auto 63px auto;
+}
+
+@media (max-width: 375px) {
+  .brand {
+    min-height: 363px;
+  }
 }
 
 .brand__title-container {
@@ -243,11 +269,33 @@ body {
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  .brand__title-container {
+    padding: 0 0 0 69px;
+  }
+}
+
 .brand__title {
   font-size: 48px;
   line-height: 58px;
   font-weight: 900;
   text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+  .brand__title {
+    font-size: 44px;
+    line-height: 52px;
+    font-weight: normal;
+  }
+}
+
+@media (max-width: 375px) {
+  .brand__title {
+    font-size: 38px;
+    line-height: 45px;
+    font-weight: normal;
+  }
 }
 
 .brand__sub-title {
@@ -257,8 +305,35 @@ body {
   display: block;
 }
 
+@media (max-width: 768px) {
+  .brand__sub-title {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: normal;
+  }
+}
+
+@media (max-width: 375px) {
+  .brand__sub-title {
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: normal;
+  }
+}
+
 .brand__pink-sub-title {
   color: #F16D7F;
+}
+
+.brand__img {
+  height: auto;
+  width: 50%;
+}
+
+@media (max-width: 375px) {
+  .brand__img {
+    display: none;
+  }
 }
 
 .promotion__list {
@@ -269,13 +344,29 @@ body {
 }
 
 .promotion__item {
-  width: 360px;
+  width: 31%;
   min-height: 260px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 0 30px;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .promotion__item {
+    width: 31%;
+    min-height: 168px;
+    margin: 0 0 19px;
+  }
+}
+
+@media (max-width: 375px) {
+  .promotion__item {
+    width: 100%;
+    min-height: 247px;
+    margin: 0 0 32px;
+  }
 }
 
 .promotion__item--woman {
@@ -297,6 +388,18 @@ body {
   background-image: url(../img/accesories.jpg);
   background-size: cover;
   width: 100%;
+}
+
+@media (max-width: 768px) {
+  .promotion__item--accesories {
+    min-height: 116px;
+  }
+}
+
+@media (max-width: 375px) {
+  .promotion__item--accesories {
+    min-height: 111px;
+  }
 }
 
 .promotion__description {
@@ -349,9 +452,22 @@ body {
   list-style-type: none;
 }
 
+@media (max-width: 375px) {
+  .products__list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .products__item {
   width: 360px;
   position: relative;
+}
+
+@media (max-width: 375px) {
+  .products__item {
+    width: 100%;
+  }
 }
 
 .products .product__wrapper {
@@ -362,6 +478,12 @@ body {
 
 .products .product__img {
   display: block;
+}
+
+@media (max-width: 375px) {
+  .products .product__img {
+    width: 100%;
+  }
 }
 
 .products .product__description {
