--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,3 +3,21 @@
     line-height: $height;
     font-weight: $weight;
 }
+
+@mixin tablet {
+    @media(max-width: $tablet-width) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media(max-width: $mobile-width) {
+        @content;
+    }
+}
+
+@mixin min-mobile {
+    @media(max-width: $mobile-width) {
+        @content;
+    }
+}
