--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,3 +12,6 @@ $light-beige-color: #FBFBFB;
 $middle-grey-color: #E1E1E1;
 $bright-grey-color: #9F9F9F;
 $medium-grey-color: #B1B1B1;
+$desktop-width: 1600px;
+$tablet-width: 768px;
+$mobile-width: 375px;
