--- a/scss/blocks/_brand.scss
+++ b/scss/blocks/_brand.scss
@@ -1,8 +1,11 @@
 .brand {
     max-width: 1600px;
-    margin: 0 auto;
     display: flex;
-    margin: 0 0 63px;
+    margin: 0 auto 63px auto;
+
+    @include mobile {
+        min-height: 363px;
+    }
 
     &__title-container {
         background: $pink-color;
@@ -10,19 +13,48 @@
         padding: 0 0 0 92px;
         display: flex;
         align-items: center;
+
+        @include tablet {
+            padding: 0 0 0 69px;
+        }
     }
 
     &__title {
         @include font(48px, 58px, 900);
         text-transform: uppercase;
+
+        @include tablet {
+            @include font(44px, 52px, normal)
+        }
+
+        @include mobile {
+            @include font(38px, 45px)
+        }
     }
 
     &__sub-title {
         @include font(32px, 38px, 700);
         display: block;
+
+        @include tablet {
+            @include font(24px, 28px, normal)
+        }
+
+        @include mobile {
+            @include font(20px, 24px)
+        }
     }
 
     &__pink-sub-title {
         color: $dark-pink-color;
+    }
+
+    &__img {
+        height: auto;
+        width: 50%;
+
+        @include mobile {
+            display: none;
+        }
     }
 }
