--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -21,11 +21,20 @@
         justify-content: space-between;
         flex-wrap: wrap;
         list-style-type: none;
+
+        @include mobile {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__item {
         width: 360px;
         position: relative;
+
+        @include min-mobile {
+            width: 100%;
+        }
     }
 
     .product {
@@ -37,6 +46,10 @@
 
         &__img {
             display: block;
+
+            @include mobile {
+                width: 100%;
+            }
         }
 
         &__description {
